--- a/business_card.html
+++ b/business_card.html
@@ -19,7 +19,7 @@
 </div>
 
 
-<div id="content">主要內容放這裡
+<div id="content">
   <div class="container">
     <div id="about"> 
       <div id="my-avatar">
@@ -70,7 +70,7 @@
         <div class="item">
           <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
           <div class="item-info">
-            <h3>我的個人網站</h3>
+            <h3>我喜愛的事情</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ad ex quo ab quidem necessitatibus voluptatibus, sit. Soluta aperiam recusandae, fugit, necessitatibus sed blanditiis cumque ullam quidem molestias dolorem quibusdam.</p>
           </div>
         </div>
