--- a/business_card.html
+++ b/business_card.html
@@ -7,12 +7,14 @@
 <body>
   <div id="nav">
     <div class="container">
+      <button type="button" class="menu-button">
+      三
+      </button>
+      <input type="checkbox" class="menu-button-checkbox">
       <ul class="menu">
-        <ul class="menu">
           <li><a href="#about">Who am I</a></li>
           <li><a href="#my-work">My Work</a></li>
           <li><a href="#contact-me">Contact me</a></li>
-        </ul>
       </ul>
     </div>
   </div>
@@ -26,7 +28,6 @@
         <img src="img/green_finger.jpg" alt="green_finger">
       </div>
       <div id="my-info">
-        <div id="my-info">
           <h1>I am Tony Lin</h1>
           <h3>Designer, M.E., and a father.</h3>
           <hr>
@@ -51,12 +52,12 @@
               </td>
             </tr>
           </table>
-        </div>
       </div>
     </div>
+    
     <!-- 在內容區域的中間加上水平線 -->
-
     <hr class="bar">
+
     <div id="my-work">
       <h1>This is My Work</h1>
       <div id="my-work-gallery">
